Concluso html, definite regole per blocco città

--- a/index.html
+++ b/index.html
@@ -11,7 +11,15 @@
   <div id="container">
     <div class="city_block novara">
       <div class="layover"></div>
-      <h1 class="city_name">Novara</h1>
+      <h1 class="city_name">novara</h1>
+    </div>
+    <div class="city_block pavia">
+      <div class="layover"></div>
+      <h1 class="city_name">pavia</h1>
+    </div>
+    <div class="city_block vercelli">
+      <div class="layover"></div>
+      <h1 class="city_name">vercelli</h1>
     </div>
   </div>
   <!-- /#container -->
