--- a/index.html
+++ b/index.html
@@ -4,25 +4,30 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@500&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Raleway&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="css/style.css">
   <title>airbnb</title>
 </head>
 <body>
-  <div id="container">
-    <div class="city_block novara">
-      <div class="layover"></div>
-      <h1 class="city_name">novara</h1>
-    </div>
-    <div class="city_block pavia">
-      <div class="layover"></div>
-      <h1 class="city_name">pavia</h1>
-    </div>
-    <div class="city_block vercelli">
-      <div class="layover"></div>
-      <h1 class="city_name">vercelli</h1>
-    </div>
+  <!-- Blocco città Novara -->
+  <div class="city_box novara">
+    <div class="layover"></div>
+    <h1 class="city_name">novara</h1>
   </div>
-  <!-- /#container -->
+  <!-- /Blocco città Novara -->
+
+  <!-- Blocco città Pavia -->
+  <div class="city_box pavia">
+    <div class="layover"></div>
+    <h1 class="city_name">pavia</h1>
+  </div>
+  <!-- /Blocco città Pavia -->
+
+  <!-- Blocco città Vercelli -->
+  <div class="city_box vercelli">
+    <div class="layover"></div>
+    <h1 class="city_name">vercelli</h1>
+  </div>
+  <!-- /Blocco città Vercelli -->
 </body>
 </html>
